# cashcrab

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  config.example.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-pypi.yml
assets/: generate_mascot.py  generate_social.py
modules/: agentpacks.py  analytics.py  auth.py  backend.py  canned_replies.py  config.py  crosspost.py  http_twitter.py  instagram.py  leads.py  llm.py  media.py  notify.py  onboarding.py  owner_api.py  preset_tweets.py  scheduler.py  tiktok.py  tts.py  twikit_client.py  twitter.py  twitter_agent.py  ui.py  video.py  x_engage.py  youtube.py
modules/resources/: __init__.py  config.example.json
scripts/: agent_runner.py  install.ps1  install.sh  sync_codex_workspace.py  tweet_proxy.py
tests/: test_agentpacks.py  test_owner_backend.py  test_twitter_workflows.py
