[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cashcrab"
version = "0.1.0"
description = "A colorful terminal app for Shorts, X posting, and lead generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "apscheduler>=3.10",
  "beautifulsoup4>=4.12",
  "click>=8.1",
  "edge-tts>=6.1",
  "g4f>=0.3",
  "google-api-python-client>=2.100",
  "google-auth-httplib2>=0.1",
  "google-auth-oauthlib>=1.1",
  "moviepy>=1.0.3",
  "openai>=1.30",
  "Pillow>=10.0",
  "requests>=2.31",
  "rich>=13.7",
  "SQLAlchemy>=2.0",
  "tweepy>=4.14",
]

[project.scripts]
cashcrab = "main:cli"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["modules*"]
